# ComfyUI-Unofficial-HSWQ-Quantizer

./: HSWQAdvancedBenchmark.py  README.md  SDXLHSWQQuantizer.py  SDXLHSWQQuantizerLegacy.py  SDXLQuantStatsCollector.py  ZITHSWQQuantizer.py  ZITQuantStatsCollector.py  __init__.py  hswq_comfy_api.py  pyproject.toml  weighted_histogram_mse_fast.py
.github/workflows/: publish.yml
core/: calibration_common.py  optimizer_bridge.py  quantization_common.py  session_store.py
model_specs/: sdxl.py  zit.py
tests/: test_collectors.py  test_quantizer_helpers.py  test_refactor_core.py  test_support.py
